--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
+!.idea/runConfigurations/
+!.idea/gradle.xml
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
