--- a/kotlin/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/kotlin/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,1 +1,1 @@
-configuration-properties.classes=com.example.testprocessor.TestConfiguration
+configuration-properties.classes=com.example.testprocessor.TestConfiguration,com.example.testprocessor.TestConfiguration2
